@@ -1,5 +1,5 @@
 .\"Document Author:  Timothy R. Butler   -   tbutler@uninetsolutions.com"
-.TH bochsrc 5 "19 July 2008" "bochsrc" "The Bochs Project"
+.TH bochsrc 5 "22 Febrary 2009" "bochsrc" "The Bochs Project"
 .\"SKIP_SECTION"
 .SH NAME
 bochsrc \- Configuration file for Bochs.
@@ -583,8 +583,8 @@ one line in the actual bochsrc file.
 .I "vga_update_interval:"
 Video memory is scanned for updates and screen updated
 every so many virtual seconds. The default value is
-40000, about 25Hz. Keep in mind that you  must tweak
-the 'cpu: ips=N' directive to be as close  to the number of
+50000, about 20Hz. Keep in mind that you must tweak
+the 'cpu: ips=N' directive to be as close to the number of
 emulated instructions-per-second your  workstation can
 do, for this to be accurate.
 
@@ -643,19 +643,16 @@ Example:
 
 .TP
 .I "mouse:"
-This option prevents Bochs from creating mouse "events"
-unless a mouse is enabled. The hardware emulation itself
-is not disabled  by this. You can turn the mouse on by
-setting enabled to  1, or turn it off by setting enabled
-to 0. Unless you have a particular reason  for enabling
-the mouse by default, it is recommended that you leave
-it off. You can also toggle the mouse usage at runtime
-(control key + middle mouse button).
+The Bochs gui creates mouse "events" unless the 'enabled' option is
+set to 0. The hardware emulation itself is not disabled by this.
+Unless you have a particular reason for enabling the mouse by default,
+it is recommended that you leave it off. You can also toggle the mouse
+usage at runtime (control key + middle mouse button).
 With the mouse type option you can select the type of mouse to emulate.
 The default value is 'ps2'. The other choices are 'imps2' (wheel mouse
-on PS/2), 'serial', 'serial_wheel' (one com port requires setting 'mode=mouse')
-and 'usb' (3-button mouse - one of the USB ports must be connected with
-the 'mouse' device - requires PCI and USB support).
+on PS/2), 'serial', 'serial_wheel' and 'serial_msys' (one com port requires
+setting 'mode=mouse'). To connect a mouse to an USB port, see the 'usb_uhci'
+option (requires PCI and USB support).
 
 Examples:
   mouse: enabled=0
@@ -807,15 +804,28 @@ Example:
   cmosimage: file=cmos.img, rtc_init=time0
 
 .TP
-.I "usb1:"
+.I "usb_uhci:"
 This option controls the presence of the USB root hub which is a part
 of the i440FX PCI chipset. With the portX option you can connect devices
-to the hub (currently supported: 'mouse' and 'keypad'). If you connect
-the mouse to one of the ports and use the mouse option 'type=usb' you'll
-have a 3-button USB mouse.
+to the hub (currently supported: 'mouse', 'tablet', 'keypad' and 'disk').
+If you connect the mouse or tablet to one of the ports, Bochs forwards the
+mouse movement data to the USB device instead of the selected mouse type.
+When connecting the keypad to one of the ports, Bochs forwards the input of
+the numeric keypad to the USB device instead of the PS/2 keyboard.
+To connect a flat image as an USB hardisk you can use the 'disk' device with
+the path to the image separated with a colon (see below).
 
 Example:
-  usb1: enabled=1, port1=mouse, port2=keypad
+  usb_uhci: enabled=1, port1=mouse, port2=disk:usbdisk.img
+
+.TP
+.I "plugin_ctrl:"
+Controls the presence of optional plugins without a separate option.
+By default all existing plugins are enabled. These plugins are currently
+supported: 'acpi', 'biosdev', 'extfpuirq', 'gameport', 'iodebug', 'pci_ide', 'speaker' and 'unmapped'.
+
+Example:
+  plugin_ctrl: biosdev=0, speaker=0
 
 .\"SKIP_SECTION"
 .SH LICENSE
